# Get2work

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tutorial.ipynb
.github/workflows/: publish.yml
get2work/: __init__.py  celebrate.py  cli.py  distraction.py  levels.py  peer_pressure.py  roast.py  storage.py  watcher.py
